src/objects/Building_Access__c.object
<CustomObject>
    <fields>
        <fullName>Access_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Building Accesses</relationshipLabel>
        <relationshipName>Building_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Building_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Building Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Building__c</columns>
        <columns>Access_All__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>